--- a/src/app.scss
+++ b/src/app.scss
@@ -1,24 +1,94 @@
+$border-color-black: black;
+
+@mixin digital-display-item {
+  border: 1px solid $border-color-black;
+  width: 50%;
+  text-align: right;
+  padding: 0.2rem 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Vending Machine */
 .vending-machine-container {
   display: flex;
-  width: 50%;
+  width: 65%;
   margin: 0 auto;
-  height: 70vh;
-  border: 1px solid black;
-  div {
+  height: 75vh;
+  border: 1px solid $border-color-black;
+  .products {
+    width: 60%;
     padding: 1rem;
   }
-  .products {
-    width: 70%;
-  }
-  .balance-and-buttons {
-    width: 30%;
-    border-left: 1px solid black;
-    .balance {
+  .digital-display-and-buttons {
+    width: 40%;
+    border-left: 1px solid $border-color-black;
+    display: grid;
+    grid-template-rows: 1fr 3fr;
+    padding: 1rem;
+    .digital-display {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 0.1rem 0;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      .balance {
+        @include digital-display-item;
+      }
+      .selection {
+        @include digital-display-item;
+      }
     }
-    .buttons {
+    .number-buttons {
+      padding: 1rem;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
-      gap: 1rem;
+      gap: 0.4rem;
+    }
+    .option-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 0 1rem;
+      button {
+        min-width: 6rem;
+      }
     }
   }
+}
+/* Product */
+
+.products-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  height: 100%;
+  justify-items: center;
+  .single-product {
+    padding: 0.5rem;
+    width: 5rem;
+    border: 1px solid $border-color-black;
+  }
+}
+
+/* Money Temperature and Energy*/
+.money-temperature-energy-container {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 0 5rem;
+  .money-container {
+    display: flex;
+    gap: 0 2rem;
+    width: 30%;
+  }
+}
+
+.money {
+  display: flex;
+  width: 20rem;
+  padding: 1rem;
+  color: white;
+  text-align: center;
 }
