set folder structre, added toastify, updtd cmpnts

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
-$border-color-black: black;
+$border-color-black: rgb(0, 0, 0);
+$border-radius: 5px;
 
 @mixin digital-display-item {
   border: 1px solid $border-color-black;
@@ -7,18 +8,33 @@ $border-color-black: black;
   padding: 0.2rem 1rem;
   display: flex;
   justify-content: space-between;
+  border-radius: $border-radius;
 }
 
+@mixin button {
+  min-width: 6rem;
+}
+:root {
+  background-image: url("./assets/images/vending-machine-place.jpeg");
+  background-position: center;
+  background-size: cover;
+  font-family: "Courier New", Courier, monospace;
+}
 /* Vending Machine */
 .vending-machine-container {
+  background-color: rgb(204, 201, 201);
   display: flex;
   width: 65%;
   margin: 0 auto;
   height: 75vh;
   border: 1px solid $border-color-black;
+  border-radius: $border-radius;
   .products {
     width: 60%;
     padding: 1rem;
+  }
+  .single-product {
+    border-radius: $border-radius;
   }
   .digital-display-and-buttons {
     width: 40%;
@@ -34,6 +50,7 @@ $border-color-black: black;
       align-items: center;
       justify-content: center;
       padding: 0;
+
       .balance {
         @include digital-display-item;
       }
@@ -52,13 +69,34 @@ $border-color-black: black;
       justify-content: center;
       gap: 0 1rem;
       button {
-        min-width: 6rem;
+        @include button();
       }
     }
   }
+  .back-of-vending-machine {
+    width: 40%;
+    border-left: 1px solid $border-color-black;
+    display: flex;
+    align-items: flex-start;
+    padding: 1rem;
+    gap: 2rem 0;
+    flex-direction: column;
+    .util-buttons {
+      button {
+        @include button();
+        width: 10rem;
+      }
+    }
+    .temperature-energy-container {
+      margin-top: 2rem;
+      display: flex;
+      align-items: center;
+      gap: 0 5rem;
+    }
+  }
 }
-/* Product */
 
+/* Product */
 .products-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -73,22 +111,21 @@ $border-color-black: black;
 }
 
 /* Money Temperature and Energy*/
-.money-temperature-energy-container {
-  margin-top: 2rem;
+.money-container {
   display: flex;
-  align-items: center;
-  gap: 0 5rem;
-  .money-container {
-    display: flex;
-    gap: 0 2rem;
-    width: 30%;
-  }
+  gap: 0 2rem;
+  width: 70%;
+  margin: 1rem auto;
+  justify-content: center;
 }
-
 .money {
+  cursor: pointer;
   display: flex;
   width: 20rem;
   padding: 1rem;
   color: white;
   text-align: center;
+}
+.money:hover {
+  transform: scale(1.1);
 }
